Class modifications, User interface (phase & process execution, error report)

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <title>Web Installer for Freedom</title>
         <link rel="stylesheet" type="text/css" href="javascript/lib/ext/resources/css/ext-all.css" />
         <link rel="stylesheet" href="javascript/lib/ext-add/GroupTabs.css" />
-		<link rel="stylesheet" href="javascript/lib/ext-add/RowActions.css" />
-		
+        <link rel="stylesheet" href="javascript/lib/ext-add/RowActions.css" />
         <script src="javascript/lib/ext/adapter/ext/ext-base.js">
         </script>
         <script src="javascript/lib/ext/ext-all-debug.js">
@@ -15,7 +14,7 @@
         </script>
         <script src="javascript/lib/ext-add/GroupTab.js">
         </script>
-		<script src="javascript/lib/ext-add/RowActions.js">
+        <script src="javascript/lib/ext-add/RowActions.js">
         </script>
         <script src="javascript/wiff.js">
         </script>
@@ -25,28 +24,43 @@
             }
 			.x-icon-setup {
                 background-image: url('images/icons/cog.png');
-            }
+            } 
 			.x-icon-context {
                 background-image: url('images/icons/book.png');
+            } 
+			.x-icon-install {
+                background-image: url('images/icons/add.png');
+            } 
+			.x-icon-update {
+                background-image: url('images/icons/add.png');
+            } 
+			.x-icon-param {
+                background-image: url('images/icons/cog.png');
+            } 
+			.x-icon-remove {
+                background-image: url('images/icons/delete.png');
+            } 
+			.x-icon-help {
+                background-image: url('images/icons/help.png');
             }
 			.x-icon-install {
-				background-image: url('images/icons/add.png');
-			}
-			.x-icon-update {
-				background-image: url('images/icons/add.png');
-			}
-			.x-icon-param {
-				background-image: url('images/icons/cog.png');
-			}
-			.x-icon-remove {
-				background-image: url('images/icons/delete.png');
-			}
-			.x-icon-help {
-				background-image: url('images/icons/help.png');
-			}
-			.x-icon-install {
-				background-image: url('images/icons/add.png');
-			}
+                background-image: url('images/icons/add.png');
+            } 
+			.x-icon-ok {
+                background-image: url('images/icons/accept.png');
+            } 
+			.x-icon-ko {
+                background-image: url('images/icons/exclamation.png');
+            } 
+			.x-icon-warning {
+                background-image: url('images/icons/error.png');
+            } 
+			.red-row .x-grid3-cell-inner {
+                color: red;
+            }
+			.green-row .x-grid3-cell-inner{
+      			color:green;
+    		} 
         </style>
     </head>
     <body>
