Added collapsible help and console message.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 			.red-row .x-grid3-cell-inner {
                 color: red;
             }
+	    .console {
+	    white-space: pre-wrap;
+	    }
 			
         </style>
     </head>
