Display help message after console message

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
             }
 	    .console {
 	    white-space: pre-wrap;
+            padding: 0.5em;
+            border-left: black dotted 1px;
+	    }
+	    .help {
+	    padding: 0.5em;
+            background-color: MistyRose;
 	    }
 			
         </style>
