Multiselection of modules, ignore button for process lists, implements infopath and hasParameter to display proper icons in module lists, some other ui corrections

--- a/index.html
+++ b/index.html
@@ -20,53 +20,56 @@
         </script>
         <style>
             .x-icon-create {
-                background-image: url('images/icons/book_add.png');
+                background-image: url('images/icons/book_add.png') !important;
             }
 			.x-icon-setup {
-                background-image: url('images/icons/cog.png');
+                background-image: url('images/icons/cog.png') !important;
             } 
 			.x-icon-context {
-                background-image: url('images/icons/book.png');
+                background-image: url('images/icons/book.png') !important;
             } 
 			.x-icon-install {
-                background-image: url('images/icons/add.png');
+                background-image: url('images/icons/add.png') !important;
             } 
 			.x-icon-update {
-                background-image: url('images/icons/add.png');
+                background-image: url('images/icons/add.png') !important;
             } 
 			.x-icon-param {
-                background-image: url('images/icons/cog.png');
+                background-image: url('images/icons/cog.png') !important;
             } 
 			.x-icon-remove {
-                background-image: url('images/icons/delete.png');
+                background-image: url('images/icons/delete.png') !important;
             } 
 			.x-icon-help {
-                background-image: url('images/icons/help.png');
+                background-image: url('images/icons/help.png') !important;
             }
 			.x-icon-install {
-                background-image: url('images/icons/add.png');
+                background-image: url('images/icons/add.png') !important;
             } 
 			.x-icon-ok {
-                background-image: url('images/icons/accept.png');
+                background-image: url('images/icons/accept.png') !important;
             } 
 			.x-icon-ko {
-                background-image: url('images/icons/exclamation.png');
+                background-image: url('images/icons/exclamation.png') !important;
             } 
 			.x-icon-warning {
-                background-image: url('images/icons/error.png');
+                background-image: url('images/icons/error.png') !important;
             } 
 			.red-row .x-grid3-cell-inner {
                 color: red;
             }
-	    .console {
-	    white-space: pre-wrap;
-            padding: 0.5em;
-            border-left: black dotted 1px;
-	    }
-	    .help {
-	    padding: 0.5em;
-            background-color: MistyRose;
-	    }
+			.mandatory-row .x-grid3-cell-inner {
+                color: gray;
+            }
+		    .console {
+		    	white-space: pre-wrap;
+	            padding: 0.5em;
+	            border-left: black dotted 1px;
+		    }
+		    .help {
+		    	padding: 0.5em;
+	            background-color: MistyRose;
+		    }
 			
         </style>
     </head>
