--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
             } 
 			.x-icon-warning {
                 background-image: url('images/icons/error.png') !important;
-            } 
+            }
+			.x-icon-loading {
+				background-image: url(javascript/lib/ext/resources/images/default/grid/loading.gif) !important;
+			}
 			.red-row .x-grid3-cell-inner {
                 color: red;
             }
