--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 		    	padding: 0.5em;
 	            background-color: MistyRose;
 		    }
+			.x-btn-text {
+				font-weight: bold !important;
+			}
 			
         </style>
     </head>
