Refresh buttons available for module lists [ closes #314 ]

--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
 			.x-icon-warning {
                 background-image: url('images/icons/error.png') !important;
             }
+			.x-icon-refresh {
+                background-image: url('images/icons/arrow_refresh.png') !important;
+            }
 			.x-icon-loading {
 				background-image: url(javascript/lib/ext/resources/images/default/grid/loading.gif) !important;
-			}
+			}			
 			.red-row .x-grid3-cell-inner {
                 color: red;
             }
