--- a/index.html
+++ b/index.html
@@ -83,5 +83,9 @@
         </style>
     </head>
     <body>
+    	<div style="position:absolute;bottom:30px;left:30px;width:100px;height:160px;" >
+			<a href="http://www.freedom-ecm.org" target="_blank"><img src=images/logo/freedom.png style='margin-bottom:10px;'/></a>
+			<a href="http://www.anakeen.com" target="_blank"><img src=images/logo/anakeen.png /></a>
+		</div>
     </body>
 </html>
