--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
             }
 			.x-icon-loading {
 				background-image: url(javascript/lib/ext/resources/images/default/grid/loading.gif) !important;
-			}			
+			}
+			.x-icon-wiff-update {
+                background-image: url('images/icons/application_get.png') !important;
+            } 		
 			.red-row .x-grid3-cell-inner {
                 color: red;
             }
