Authentification for WIFF [closes #384]

--- a/index.html
+++ b/index.html
@@ -63,7 +63,13 @@
 			}
 			.x-icon-wiff-update {
                 background-image: url('images/icons/application_get.png') !important;
-            } 		
+            }
+			.x-icon-wiff-password {
+                background-image: url('images/icons/application_key.png') !important;
+            }
+			.x-icon-undo {
+				background-image: url('images/icons/arrow_undo.png') !important;
+			}
 			.red-row .x-grid3-cell-inner {
                 color: red;
             }
