Repository reference by tag 'use' for contexts [closes #381]

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 			.x-icon-undo {
 				background-image: url('images/icons/arrow_undo.png') !important;
 			}
+			.x-icon-cross {
+				background-image: url('images/icons/cross.png') !important;
+			}
 			.red-row .x-grid3-cell-inner {
                 color: red;
             }
