--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 			.x-icon-cross {
 				background-image: url('images/icons/cross.png') !important;
 			}
+			.x-icon-debug {
+				background-image: url('images/icons/application_form_magnify.png') !important;
+			}
 			.red-row .x-grid3-cell-inner {
                 color: red;
             }
