--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 			.x-icon-debug {
 				background-image: url('images/icons/application_form_magnify.png') !important;
 			}
+			.x-icon-import {
+				background-image: url('images/icons/package_go.png') !important;
+			}
 			.red-row .x-grid3-cell-inner {
                 color: red;
             }
@@ -94,6 +97,31 @@
 			.x-btn-text {
 				font-weight: bold !important;
 			}
+			
+			.x-form-file-wrap {
+    position: relative;
+    height: 22px;
+}
+.x-form-file-wrap .x-form-file {
+	position: absolute;
+	right: 0;
+	-moz-opacity: 0;
+	filter:alpha(opacity: 0);
+	opacity: 0;
+	z-index: 2;
+    height: 22px;
+}
+.x-form-file-wrap .x-form-file-btn {
+	position: absolute;
+	right: 0;
+	z-index: 1;
+}
+.x-form-file-wrap .x-form-file-text {
+    position: absolute;
+    left: 0;
+    z-index: 3;
+    color: #777;
+}
 			
         </style>
     </head>
