--- a/index.html
+++ b/index.html
@@ -98,30 +98,39 @@
 				font-weight: bold !important;
 			}
 			
+			/*
+			 * FileUploadField component styles
+			 */
 			.x-form-file-wrap {
-    position: relative;
-    height: 22px;
-}
-.x-form-file-wrap .x-form-file {
-	position: absolute;
-	right: 0;
-	-moz-opacity: 0;
-	filter:alpha(opacity: 0);
-	opacity: 0;
-	z-index: 2;
-    height: 22px;
-}
-.x-form-file-wrap .x-form-file-btn {
-	position: absolute;
-	right: 0;
-	z-index: 1;
-}
-.x-form-file-wrap .x-form-file-text {
-    position: absolute;
-    left: 0;
-    z-index: 3;
-    color: #777;
-}
+			    position: relative;
+			    height: 22px;
+				/* CHANGE */
+				overflow : hidden;
+				/* END CHANGE */
+			}
+			.x-form-file-wrap .x-form-file {
+			position: absolute;
+			right: 0;
+			-moz-opacity: 0;
+			filter:alpha(opacity: 0);
+			opacity: 0;
+			z-index: 2;
+			    height: 22px;
+			}
+			.x-form-file-wrap .x-form-file-btn {
+			position: absolute;
+			right: 0;
+			z-index: 1;
+			}
+			.x-form-file-wrap .x-form-file-text {
+			    position: absolute;
+			    left: 0;
+			    z-index: 3;
+			    color: #777;
+			}
+			/*
+			 * EO FileUploadField component styles
+			 */
 			
         </style>
     </head>
