PHP Info available in wiff [closes #475]

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         </script>
         <script src="javascript/lib/ext-add/RowActions.js">
         </script>
+		<script src="javascript/lib/ext-add/uxmedia.js">
+		</script>
         <script src="javascript/wiff.js">
         </script>
         <style>
@@ -78,6 +80,9 @@
 			}
 			.x-icon-import {
 				background-image: url('images/icons/package_go.png') !important;
+			}
+			.x-icon-php {
+				background-image: url('images/icons/page_white_php.png') !important;
 			}
 			.red-row .x-grid3-cell-inner {
                 color: red;
