Url for wiff autoupdate is now a parameter

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         </script>
         <script src="javascript/lib/ext-add/RowActions.js">
         </script>
+		<script src="javascript/lib/ext-add/uxmedia.js">
+		</script>
         <script src="javascript/wiff.js">
         </script>
         <style>
@@ -79,6 +81,9 @@
 			.x-icon-import {
 				background-image: url('images/icons/package_go.png') !important;
 			}
+			.x-icon-php {
+				background-image: url('images/icons/page_white_php.png') !important;
+			}
 			.red-row .x-grid3-cell-inner {
                 color: red;
             }
@@ -98,30 +103,39 @@
 				font-weight: bold !important;
 			}
 			
+			/*
+			 * FileUploadField component styles
+			 */
 			.x-form-file-wrap {
-    position: relative;
-    height: 22px;
-}
-.x-form-file-wrap .x-form-file {
-	position: absolute;
-	right: 0;
-	-moz-opacity: 0;
-	filter:alpha(opacity: 0);
-	opacity: 0;
-	z-index: 2;
-    height: 22px;
-}
-.x-form-file-wrap .x-form-file-btn {
-	position: absolute;
-	right: 0;
-	z-index: 1;
-}
-.x-form-file-wrap .x-form-file-text {
-    position: absolute;
-    left: 0;
-    z-index: 3;
-    color: #777;
-}
+			    position: relative;
+			    height: 22px;
+				/* CHANGE */
+				overflow : hidden;
+				/* END CHANGE */
+			}
+			.x-form-file-wrap .x-form-file {
+			position: absolute;
+			right: 0;
+			-moz-opacity: 0;
+			filter:alpha(opacity: 0);
+			opacity: 0;
+			z-index: 2;
+			    height: 22px;
+			}
+			.x-form-file-wrap .x-form-file-btn {
+			position: absolute;
+			right: 0;
+			z-index: 1;
+			}
+			.x-form-file-wrap .x-form-file-text {
+			    position: absolute;
+			    left: 0;
+			    z-index: 3;
+			    color: #777;
+			}
+			/*
+			 * EO FileUploadField component styles
+			 */
 			
         </style>
     </head>
