Some refactor and predefined login value in wiff

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         </script>
 		<script src="javascript/lib/ext-add/uxmedia.js">
 		</script>
+		<script src="javascript/lib/ext-add/FileUploadField.js">
+		</script>
         <script src="javascript/wiff.js">
         </script>
         <style>
