Correction for repositories [refs #406]

--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
 			.x-btn-text {
 				font-weight: bold !important;
 			}
+			.x-form-check-wrap, .x-form-display-field {
+				padding-top: 4px;
+				height: 18px;
+			}
 			
 			/*
 			 * FileUploadField component styles
