Checkbox to select all updatable modules

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
 			.x-icon-php {
 				background-image: url('images/icons/page_white_php.png') !important;
 			}
+			.x-icon-loading {
+				background-image: url('javascript/lib/ext/resources/images/default/grid/loading.gif') !important;
+			}
 			.red-row .x-grid3-cell-inner {
                 color: red;
             }
