Changelog for module is supported

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
 			.x-icon-loading {
 				background-image: url('javascript/lib/ext/resources/images/default/grid/loading.gif') !important;
 			}
+			.x-icon-log {
+				background-image: url('images/icons/paste_plain.png') !important;
+			}
 			.red-row .x-grid3-cell-inner {
                 color: red;
             }
