Correction for aborted issue [ refs #677 ]

--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
 			.x-icon-log {
 				background-image: url('images/icons/paste_plain.png') !important;
 			}
+			.x-tab-strip .x-icon-loading {
+				color: #DFE8F6 !important;
+			}
+			.x-tab-strip-active .x-icon-loading {
+				color: #395B8E !important;
+			}
 			.red-row .x-grid3-cell-inner {
                 color: red;
             }
