--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 			.x-icon-context {
                 background-image: url('images/icons/book.png') !important;
             }
+			.x-icon-delete-context {
+				background-image: url('images/icons/book_delete.png') !important;
+			}
 			.x-icon-archive {
                 background-image: url('images/icons/package.png') !important;
             } 
