Dynacase-control: Header of html page change to Dynacase-Control [#refs 1162]

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Web Installer for Freedom</title>
+        <title>Dynacase-Control</title>
         <link rel="stylesheet" type="text/css" href="javascript/lib/ext/resources/css/ext-all.css" />
         <link rel="stylesheet" type="text/css" href="javascript/lib/ext-add/GroupTabs.css" />
         <link rel="stylesheet" type="text/css" href="javascript/lib/ext-add/RowActions.css" />
@@ -170,7 +170,7 @@
     </head>
     <body>
     	<div style="position:absolute;bottom:30px;left:30px;width:100px;height:160px;" >
-			<a href="http://www.freedom-ecm.org" target="_blank"><img src=images/logo/freedom.png style='margin-bottom:10px;'/></a>
+			<a href="http://www.dynacase.org" target="_blank"><img src=images/logo/freedom.png style='margin-bottom:10px;'/></a>
 			<a href="http://www.anakeen.com" target="_blank"><img src=images/logo/anakeen.png /></a>
 		</div>
     </body>
