Dyncase Control 1.0.0 : Parameters Panel done, possibility to change one parameter at a time or all in once, list sort by name. [refs #1232]

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="javascript/lib/ext/resources/css/ext-all.css" />
         <link rel="stylesheet" type="text/css" href="javascript/lib/ext-add/GroupTabs.css" />
         <link rel="stylesheet" type="text/css" href="javascript/lib/ext-add/RowActions.css" />
+		<link rel="icon" type="image/png" href="images/icons/dynacase.ico" />
         <script src="javascript/lib/ext/adapter/ext/ext-base.js">
         </script>
         <script src="javascript/lib/ext/ext-all-debug.js">
