Dynacase control 1.0.0 : Logo size change [refs #1162]

--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
         </style>
     </head>
     <body>
-    	<div style="position:absolute;bottom:30px;left:30px;width:100px;height:160px;" >
-			<a href="http://www.dynacase.org" target="_blank"><img src=images/logo/freedom.png style='margin-bottom:10px;'/></a>
-			<a href="http://www.anakeen.com" target="_blank"><img src=images/logo/anakeen.png /></a>
-		</div>
+        <div style="text-align:center;position:absolute;bottom:15px;left:30px;width:100px;z-index:0;" >
+             <a href="http://www.dynacase.org" target="_blank"><img src=images/logo/freedom.png style='height:80px; margin-bottom:10px;'/></a>
+             <a href="http://www.anakeen.com" target="_blank"><img src=images/logo/anakeen.png /></a>
+        </div>
     </body>
 </html>
