Add favico (refs #1249)

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <LINK rel="icon" href="images/icons/dynacase.ico" >
+        <link rel="shortcut icon" href="images/icons/dynacase.ico" >
         <title>Dynacase-Control</title>
         <link rel="stylesheet" type="text/css" href="javascript/lib/ext/resources/css/ext-all.css" />
         <link rel="stylesheet" type="text/css" href="javascript/lib/ext-add/GroupTabs.css" />
