--- a/index.html
+++ b/index.html
@@ -168,12 +168,17 @@
 			/*
 			 * EO FileUploadField component styles
 			 */
+	    
+	               #group-tab-panel > .x-tab-panel-header {
+                          background : url('images/logo/dynacase-control.png') top center !important;
+                          background-repeat : no-repeat !important;
+                          padding-top:60px;
+                       }
 			
         </style>
     </head>
     <body>
         <div style="text-align:center;position:absolute;bottom:15px;left:30px;width:100px;z-index:0;" >
-             <a href="http://www.dynacase.org" target="_blank"><img src=images/logo/freedom.png style='height:80px; margin-bottom:10px;'/></a>
              <a href="http://www.anakeen.com" target="_blank"><img src=images/logo/anakeen.png /></a>
         </div>
     </body>
