(refs #1629) add archive download icon

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 			.x-icon-archive {
                 background-image: url('images/icons/package.png') !important;
             } 
+			.x-icon-archive-download {
+                background-image: url('images/icons/icon-archive-download.png') !important;
+            } 
 			.x-icon-install {
                 background-image: url('images/icons/add.png') !important;
             } 
